fixed scaling issues for spotify logo on safari

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -116,8 +116,6 @@ input {
 
 .playlist-image{
     display: block;
-    width: 100%;
-    height: auto;
 }
 
 .spotify-logo{
